2022-02-05: change debian build from "checkinstall" to "stdeb" tool [de61c32]
2021-11-17: Fix #12: Avoid nasty sdcc 4.0 regression [a9b362f]
2021-08-22: fixed sdcc_debian_old/sdcc_3.8.0.tgz package [3884370]
2021-08-22: provide sdcc packages from buster (ver. 3.8.0) and stretch (ver. 3.5.0) [81f6913]
2021-08-22: revert FW to debian buster build [9279d39]
2021-08-20: fix regresion: https://github.com/OpenHantek/OpenHantek6022/issues/213 [df873a4]
2021-06-06: fix #11; add option --decimalcomma to create german csv [d350e23]
2021-04-13: update README [2e29ddd]
2021-04-13: Ubuntu-20.04 is mandatory to get a recent SDCC for build [31b111f]
2021-04-13: Create build_check.yml [7dfa5a0]
2021-02-22: CI provider appveyor: upgrade build system to Ubuntu2004 [006297c]
2021-02-22: more calibration frequency possibilities [075c6b6]
2021-02-21: new functon to set the calibration pulse frequency [0a018c4]
2021-02-14: update to FW version 2.08 [dcba8fe]
2021-02-14: close #9 - use additional port bits that are easier to solder [599d8c0]
2021-02-14: add FW for new DIY model DSO6021; no functional change; doc update [73b08d7]
2021-02-11: small tool to initialize the eeprom (erase and set hantek usb id) [78136c6]
2021-02-11: doc update [76ef609]
2021-02-08: use the correct udev file name [ec7e91f]
2021-02-08: added 6022BL to the udev rule [a27e411]
2020-12-11: Merge branch 'master' of github.com:Ho-Ro/Hantek6022API [fb41d0c]
2020-12-11: small doc correction [e902af4]
2020-11-25: Merge branch 'master' of github.com:Ho-Ro/Hantek6022API [962d27c]
2020-11-25: fix #10, thx hosh0r [93b77d1]
2020-06-16: FW 0207: new samplerates 40 kS/s and 400 kS/s [af7aa26]
2020-05-20: Explanation of the most important examples [f5861cd]
2020-04-30: industrial cleaning [e497692]
2020-04-05: add Sainsmart DDS120 FW [50bbbe4]
2020-04-02: update 6022BL firmware version [86eb860]
2020-03-28: downsampling for capture, more analysis examples [bed9447]
2020-03-26: demo fft for captured data [845db1b]